<package>
  <name>cuarl_util</name>
  <version>0.1.0</version>
  <description>Concordia University Aerospace Robotics Lab - ROS utility programs</description>

  <maintainer email="ty@unutilized.net">Tyson Boer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
